# cineyma

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  testimonial.yml
.github/workflows/: ci.yml
benches/: actor_spawn.rs  cluster_gossip.rs  failure_detection.rs  message_throughput.rs  request_response.rs  serialization.rs
benches/common/: mod.rs
examples/chat/: Cargo.toml  README.md
examples/chat/src/: main.rs
examples/distributed-kv/: Cargo.toml  README.md
examples/distributed-kv/src/: kv_store.rs  main.rs
proto/: messages.proto
src/: actor.rs  address.rs  context.rs  envelope.rs  error.rs  lib.rs  registry.rs  runner.rs  stream.rs  supervisor.rs  system.rs  timer.rs
src/remote/: addr.rs  client.rs  cluster.rs  cluster_client.rs  handler.rs  mod.rs  server.rs  transport.rs
tests/: basic.rs  cluster.rs  remote.rs  streams.rs  supervision.rs  system.rs
